--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ body {
     align-items: center;
     text-align: center;
     background-color: var(--white);
+    overflow-y: auto;
 }
 
 .title {
